--- a/pom.xml
+++ b/pom.xml
@@ -86,11 +86,28 @@
             <artifactId>liberty-maven-plugin</artifactId>
             <version>${liberty-maven-plugin.version}</version>
             <configuration>
-              <serverName>${liberty.server.name}</serverName>
+              <copyDependencies>
+                <dependency>
+                  <groupId>com.h2database</groupId>
+                  <artifactId>h2</artifactId>
+                </dependency>
+              </copyDependencies>
+
             </configuration>
           </plugin>
         </plugins>
       </build>
+
+      <dependencyManagement>
+        <dependencies>
+          <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.2.220</version>
+          </dependency>
+        </dependencies>
+      </dependencyManagement>
+
     </profile>
   </profiles>
 
