--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,8 +36,19 @@
 
     <security-constraint>
         <web-resource-collection>
-            <web-resource-name>matches</web-resource-name>
-            <url-pattern>/matches/*</url-pattern>
+            <web-resource-name>match</web-resource-name>
+            <url-pattern>/match/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>user</role-name>
+            <role-name>admin</role-name>
+        </auth-constraint>
+    </security-constraint>
+
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>tournament</web-resource-name>
+            <url-pattern>/tournament/*</url-pattern>
         </web-resource-collection>
         <auth-constraint>
             <role-name>user</role-name>
@@ -63,5 +74,20 @@
     <security-role>
         <role-name>user</role-name>
     </security-role>
+
+    <error-page>
+        <error-code>401</error-code>
+        <location>/error/401.xhtml</location>
+    </error-page>
+
+    <error-page>
+        <error-code>403</error-code>
+        <location>/error/403.xhtml</location>
+    </error-page>
+
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error/404.xhtml</location>
+    </error-page>
 
 </web-app>
