--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,14 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.hibernate.orm</groupId>
+      <artifactId>hibernate-jpamodelgen</artifactId>
+      <version>6.3.1.Final</version>
+      <scope>provided</scope>
+    </dependency>
+
+
   </dependencies>
 
   <build>
